Add lighter accent color

--- a/packages/renderer/src/assets/styles.scss
+++ b/packages/renderer/src/assets/styles.scss
@@ -1,6 +1,7 @@
 $background-col: #292524;
 $background-accent: #a8a29e;
 $background-lighter: #44403c;
+$background-lighter-2: #57534e;
 $background-dark-accent: #1c1917;
 $valo-red: #dc2626;
 $valo-red-accent: #b91c1c;
