--- a/packages/renderer/src/assets/styles.scss
+++ b/packages/renderer/src/assets/styles.scss
@@ -53,3 +53,7 @@ $valo-red-accent: #b91c1c;
   font-size: 0.75rem;
   line-height: 1rem;
 }
+
+.shadow {
+  filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
+}
